--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test</title>
+    <title>Jurassic</title>
     <style type="text/css">
         @-webkit-keyframes eye {
           0% {
