--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Jurassic World</title>
+    <title>No Internet</title>
     <style type="text/css">
         @-webkit-keyframes eye {
           0% {
